# gmlp

./: CMakeLists.txt  README.md
src/: Network.h  Neuron.h  genetic.h  init.h  loss.h  test.cpp  testga.cpp  transfer.h  utils.h
